--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,18 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    // JUnit 5 API and engine for writing and running tests
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
+
+    // Optional: Assertions and parameterized tests
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
+
+    // If you are using Kotlin, add the Kotlin test dependency
+    testImplementation 'org.jetbrains.kotlin:kotlin-test:1.9.10'
+}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
+
 }
